CHANGELOG: Added QS Transparency and Blur